maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:2: error: Missing closing brace `}' assumed here
var c=0
^Escaper:4: error: expected start of definition
override def run() {
         ^Escaper:11: error: Missing closing brace `}' assumed here
def Gauche() {
^